--- a/style.css
+++ b/style.css
@@ -1064,8 +1064,9 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-#prodTwoBtns>input{
+#prodTwoBtns>form>input{
     background-color: transparent;
+    height: 2vmax;
 }
 #buy{
     display: flex;
@@ -1530,7 +1531,7 @@ input[type=text]{
     color: #333333;
 }
 
-#scrollUsers{
+#scrollUsers, #cart{
     width: 100%;
     height: 25vmax;
     overflow-y: scroll;
@@ -1690,6 +1691,225 @@ input[type=text]{
 }
 #secondMod{
     height: 33vmax;
+}
+
+#titlesItems{
+    display: flex;
+    flex-direction: row;
+    height: 3vmax;
+    align-items: center;
+    font-family: 'Gilroy-Med';
+    color: #333333;
+}
+#titleId{
+    width: 1.25vmax;
+}
+#titleImg{
+    width: 3.85vmax;
+}
+#titleName{
+    width: 12.35vmax;
+}
+#titlePrice{
+    width: 7.7vmax;
+}
+#titleDesc{
+    width: 16.7vmax;
+}
+#titleCat{
+    width: 7vmax;
+}
+#titleAction{
+    width: 6.85vmax;
+}
+
+/* CATEGORIES */
+#catCatAdmin{
+    display: flex;
+    flex-direction: row;
+    height: 3vmax;
+    align-items: center;
+    font-family: 'Gilroy-Med';
+    color: #333333;
+}
+#formSearch {display:grid;
+             grid-column:1/7;
+             grid-template-columns: 70% 5% 1fr;
+             grid-template-rows: 100%;}
+#buttonSearch {grid-column:3;}
+#formSearch input:not(#buttonSearch) {width:100%;
+                                     height:2vmax;}
+
+
+#fixedButton {position:fixed;
+              bottom:0;
+              right:0;
+              width:5vmax;
+              height:5vmax;
+              background-size: cover;
+              background-image: url("images/arrow.png");}
+
+.rowOrderFORCATEGORY {grid-template-columns:4% 30% 15% 17% 15% 1fr;
+                              height:4vmax;
+                              align-items:center;}
+ #orderContent {display:grid;
+                         grid-column:3;
+                         grid-template-rows:100%;
+                         grid-template-columns:100%;}
+          .orderContentForADMIN {width:130%;}
+
+#rowOrder {display:grid;
+                     grid-template-rows:100%;
+                     width:100%;
+                     color:#333333;
+                     font-family:"Gilroy";
+                     font-size:1.2vmax;
+                     }
+
+.rowOrderForADMIN{grid-template-columns:2% 7% 20% 2% 12% 2% 28% 2% 12% 1fr 1fr; 
+                           height:4vmax;
+                           align-items:center;}
+          .rowOrderForADMIN input {padding-left:3%;}
+
+#buttonCreateJew {grid-column:8/11;
+     width:110%;
+     height:60%;
+     color:white; 
+     text-align: center;
+     line-height: 200%;
+     background-color:#333333;
+     font-size: 1.2vmax;
+     font-family: "Gilroy";}
+#buttonCreateJew a {color:white; }
+#formSearch{
+    width: 20vmax;
+    height: auto;
+    border: transparent;
+}
+
+
+#filterSortAdminJew{
+    gap: 2vmax;
+}
+#sortNFilterTovar>form{
+    height: auto;
+}
+
+#sortNFilterTovar{
+    display: flex;
+    flex-direction: row;
+    gap: 2vmax;
+    width: auto;
+    align-items: center;
+    height:auto
+}
+.labelFilSor{
+    display: flex;
+    flex-direction: column;
+}
+.labelFilSor{
+    width: 14vmax;
+}
+.labelFilSor>label{
+    line-height: 300%;
+    color: #333333;
+    width: 14vmax;
+}
+.labelFilSor>select{
+    width: 14vmax;
+}
+.widthAuto{
+    width: auto;
+    display: flex;
+    flex-direction: row;
+}
+#submitFSAJew{
+    align-self: flex-end;
+}
+
+/* CART */
+#cart{
+    display: flex;
+    flex-direction: column;
+    gap: 2vmax;
+}
+.oneProdCart{
+    width: 86%;
+    height: 6vmax;
+    padding: 1vmax 5%;
+    display: flex;
+    flex-direction: row;
+    gap: 3vmax;
+    background-color: rgba(1,1,1,0.1);
+}
+.imgProdCat{
+    width: 6vmax;
+    height: 6vmax;
+}
+.infoCart{
+    display: flex;
+    flex-direction: column;
+    gap: 1vmax;
+    width: 26vmax;
+    height: 6vmax;
+}
+.nameProdcat{
+    font-family: Gilroy-Reg;
+    font-size: 1.2vmax;
+}
+.priceNAmountCart{
+    display: flex;
+    flex-direction: row;
+    gap: 1vmax;
+    height: auto;
+}
+.priceNAmountCart>span{
+    font-family: Gilroy-Reg;
+    font-size: 1.2vmax;
+}
+.sumProdCart{
+    display: flex;
+    align-items: end;
+    width: 30vmax;
+    font-family: Gilroy-Med;
+    font-size: 1.2vmax;
+}
+.cartBtns{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-self: end;
+    width: 10vmax;
+    height: 3vmax;
+}
+.minusProdCart, .plusProdCart{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.5vmax;
+    height: 1.8vmax;
+    background-color: #333333;
+    color: aliceblue;
+    font-family: Gilroy-SBold;
+    font-size: 1.2vmax;
+}
+.amountProdCart{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3vmax;
+    height: 3vmax;
+    background-color: #333333;
+    color: aliceblue;
+    font-family: Gilroy-SBold;
+    font-size: 1.2vmax;
+}
+.cartFormPlus{
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    border: transparent;
 }
 @font-face {
     font-family: 'Gilroy-Med';
